Cleaned scans_data_preparation, added model and training file

--- a/Scans_data_preparation.ipynb
+++ b/Scans_data_preparation.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Liver segmentations"
+    "# Scans data preparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,17 @@
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import cv2\n",
     "import math\n",
     "\n",
     "# Set numpy print options to avoid truncation\n",
     "#np.set_printoptions(threshold=np.inf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing"
    ]
   },
   {
@@ -42,11 +48,9 @@
     "#use first image as example\n",
     "\n",
     "#12 and 13 are liver\n",
-    "#image and segmentation have the same affine matrix\n",
-    "#did not yet update affine and header (not necessary?)\n",
     "\n",
-    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last scan niftis cropped\"\n",
-    "segmentations_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last segmentations cropped\"\n",
+    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last_scans\"\n",
+    "segmentations_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last_segmentations\"\n",
     "\n",
     "#load first image and segmentation\n",
     "image = nib.load(os.path.join(scans_path, \"CAESAR001_1_0000.nii.gz\"))\n",
@@ -72,24 +76,15 @@
     "\n",
     "# Crop the liver image using the bounding box\n",
     "cropped_liver_image = liver_image[min_indices[0]:max_indices[0]+1, min_indices[1]:max_indices[1]+1, min_indices[2]:max_indices[2]+1]\n",
-    "#print(cropped_liver_image.shape)\n",
-    "#padd with required number of zeros to correct size\n",
+    "\n",
     "\n",
     "\n",
     "# # Create a new NIfTI image\n",
     "new_image = nib.Nifti1Image(cropped_liver_image, affine=image.affine, header=image.header)\n",
     "\n",
     "# # Save the new NIfTI image to a file\n",
-    "output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_segmentations/test_liver_image.nii.gz\"\n",
-    "nib.save(new_image, output_path)\n",
-    "\n",
-    "# Display multiple plots\n",
-    "# for i in range(cropped_liver_image.shape[2]):\n",
-    "#     plt.figure()  # Create a new figure for each slice\n",
-    "#     plt.imshow(cropped_liver_image[:, :, i], cmap='gray')\n",
-    "#     plt.title(f'Slice {i}')\n",
-    "#     plt.axis('off')\n",
-    "#     plt.show()"
+    "#output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_scans/test_liver_image.nii.gz\"\n",
+    "nib.save(new_image, output_path)\n"
    ]
   },
   {
@@ -101,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +110,7 @@
    ],
    "source": [
     "#distribution of slices\n",
-    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last scan niftis cropped\"\n",
+    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last_scans\"\n",
     "\n",
     "max_slices = 0\n",
     "\n",
@@ -127,10 +122,9 @@
     "    if image_shape[2] < 150:\n",
     "        number_of_slices.append(image_shape[2])\n",
     "\n",
-    "print(len(number_of_slices))\n",
-    "print(max_slices)\n",
-    "#plt.hist(number_of_slices)\n",
-    "#plt.show() "
+    "print(f\"Max number of slices {max_slices}\")\n",
+    "plt.hist(number_of_slices)\n",
+    "plt.show() "
    ]
   },
   {
@@ -146,11 +140,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#does not update affine and header\n",
+    "\"\"\"\n",
+    "Segments the liver and apply bounding box \n",
+    "\"\"\"\n",
     "\n",
-    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last scan niftis cropped\"\n",
-    "segmentations_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last segmentations cropped\"\n",
-    "output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_segmentations\"\n",
+    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last_scans\"\n",
+    "segmentations_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last_segmentations\"\n",
+    "output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_scans\"\n",
     "\n",
     "max_dimensions = [0, 0, 0]\n",
     "\n",
@@ -193,7 +189,14 @@
     "    output_file_path = os.path.join(output_path, new_filename)\n",
     "    nib.save(new_image, output_file_path)\n",
     "\n",
-    "print(max_dimensions)"
+    "print(f\"max dimensions: {max_dimensions}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribution of dimension sizes"
    ]
   },
   {
@@ -210,8 +213,10 @@
     }
    ],
    "source": [
-    "#check the shape of every image\n",
-    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_segmentations\"\n",
+    "\"\"\"\n",
+    "Checks the shape of every scan and print the max number of slices\n",
+    "\"\"\"\n",
+    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_scans\"\n",
     "\n",
     "first_dim = []\n",
     "second_dim = []\n",
@@ -224,9 +229,8 @@
     "    first_dim.append(image_data.shape[0])\n",
     "    second_dim.append(image_data.shape[1])\n",
     "    third_dim.append(image_data.shape[2])\n",
-    "    max_slices = max(max_slices, image_data.shape[2])\n",
     "\n",
-    "print(max_slices)\n"
+    "print(f\"Max number of slices: {max(third_dim)}\")\n"
    ]
   },
   {
@@ -256,7 +260,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add appropriate padding for every scan"
+    "## Add appropriate padding for every scan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Padding"
    ]
   },
   {
@@ -265,10 +276,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#add padding for all images with a 100 slices or less\n",
+    "\"\"\"\n",
+    "Pads the liver scans with less than 100 slices to the desired size\n",
+    "\"\"\"\n",
     "\n",
-    "boundingbox_segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_segmentations\"\n",
-    "padded_segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/padded_liver_segmentations\"\n",
+    "boundingbox_segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_scans\"\n",
+    "padded_segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/padded_liver_scans\"\n",
     "\n",
     "#largest dimensions of all images\n",
     "#biggest image is: [429, 341, 366]\n",
@@ -309,128 +322,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.11.0) :-1: error: (-5:Bad argument) in function 'resize'\n> Overload resolution failed:\n>  - Can't parse 'dsize'. Expected sequence length 2, got 3\n>  - Can't parse 'dsize'. Expected sequence length 2, got 3\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m image_data = image.get_fdata()\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m image_data.shape[\u001b[32m2\u001b[39m] > \u001b[32m100\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m     downsized = \u001b[43mcv2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdsize\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_data\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimage_data\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m     \u001b[38;5;66;03m# Create a new NIfTI image\u001b[39;00m\n\u001b[32m     16\u001b[39m     new_image = nib.Nifti1Image(downsized, affine=image.affine, header=image.header)\n",
-      "\u001b[31merror\u001b[39m: OpenCV(4.11.0) :-1: error: (-5:Bad argument) in function 'resize'\n> Overload resolution failed:\n>  - Can't parse 'dsize'. Expected sequence length 2, got 3\n>  - Can't parse 'dsize'. Expected sequence length 2, got 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "#downsize imgages with more than a 100 slices and pad\n",
-    "\n",
-    "\n",
-    "boundingbox_segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_segmentations\"\n",
-    "padded_segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/downsized_padded_liver_segmentations\"\n",
-    "\n",
-    "for scan in os.listdir(boundingbox_segm_path):\n",
-    "    #load first image and segmentation\n",
-    "    image = nib.load(os.path.join(boundingbox_segm_path, scan))\n",
-    "\n",
-    "    image_data = image.get_fdata()\n",
-    "    if image_data.shape[2] > 100:\n",
-    "        downsized = cv2.resize(image_data, dsize=(image_data.shape[0], image_data.shape[1], 100))\n",
-    "\n",
-    "        # Create a new NIfTI image\n",
-    "        new_image = nib.Nifti1Image(downsized, affine=image.affine, header=image.header)\n",
-    "\n",
-    "        # Save the new NIfTI image to a file\n",
-    "        output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/downsized_padded_liver_segmentations/test_liver_image.nii.gz\"\n",
-    "        nib.save(new_image, output_path)\n",
-    "        break\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sanity checks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All images have the same size.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Path to the folder containing padded liver segmentations\n",
-    "padded_segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/padded_liver_segmentations\"\n",
-    "\n",
-    "# Initialize a variable to store the shape of the first image\n",
-    "reference_shape = None\n",
-    "all_same_size = True\n",
-    "\n",
-    "# Iterate through all files in the folder\n",
-    "for scan in os.listdir(padded_segm_path):\n",
-    "    # Load the image\n",
-    "    image = nib.load(os.path.join(padded_segm_path, scan))\n",
-    "    image_data = image.get_fdata()\n",
-    "    \n",
-    "    # Get the shape of the current image\n",
-    "    current_shape = image_data.shape\n",
-    "    \n",
-    "    # If reference_shape is None, set it to the shape of the first image\n",
-    "    if reference_shape is None:\n",
-    "        reference_shape = current_shape\n",
-    "    else:\n",
-    "        # Compare the shape of the current image with the reference shape\n",
-    "        if current_shape != reference_shape:\n",
-    "            all_same_size = False\n",
-    "            print(f\"Image {scan} has a different size: {current_shape}\")\n",
-    "            break\n",
-    "\n",
-    "if all_same_size:\n",
-    "    print(\"All images have the same size.\")\n",
-    "else:\n",
-    "    print(\"Not all images have the same size.\")"
+    "### Padding and downsizing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CAESAR032_1_0000_cropped.nii.gz\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'max_slices' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(scan)\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Calculate the step size to keep the number of slices under 100\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m step_size = math.ceil(image_data.shape[\u001b[32m2\u001b[39m] / \u001b[43mmax_slices\u001b[49m)\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m# Use the slicer object to extract a specific slice\u001b[39;00m\n\u001b[32m     20\u001b[39m resampled_image = image.slicer[:, :, ::step_size]  \n",
-      "\u001b[31mNameError\u001b[39m: name 'max_slices' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Downsizes all images with a number of slices greater than 100, then pads them to the desired size\n",
+    "\"\"\"\n",
+    "\n",
     "# Define paths\n",
-    "input_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_segmentations\"\n",
-    "output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/downsized_padded_liver_segmentations\"\n",
+    "input_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_scans\"\n",
+    "output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/downsized_padded_liver_scans\"\n",
     "\n",
     "max_dimensions = [430, 345, 100] \n",
     "\n",
@@ -468,14 +378,21 @@
     "        new_header['dim'][1:4] = padded_liver_image.shape  # Update dimensions\n",
     "\n",
     "        # Create a new NIfTI image\n",
-    "        new_image = nib.Nifti1Image(padded_image, affine=image.affine, header=new_filename)\n",
+    "        new_image = nib.Nifti1Image(padded_image, affine=image.affine, header=new_header)\n",
     "\n",
     "        \n",
     "        # Save the resampled image to a file with the original name\n",
     "        output_file_path = os.path.join(output_path, scan)\n",
     "        nib.save(new_image, output_file_path)\n",
-    "        break\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sanity checks"
    ]
   },
   {
@@ -484,17 +401,51 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "122.0"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All images have the same size.\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Check if all scans in a folder have the same size\n",
+    "\"\"\"\n",
+    "\n",
+    "# Path to the folder containing padded and/or downsized liver segmentations\n",
+    "path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/padded_liver_scans\"\n",
+    "#path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/downsized_padded_liver_scans\"\n",
+    "\n",
+    "\n",
+    "# Initialize a variable to store the shape of the first image\n",
+    "reference_shape = None\n",
+    "all_same_size = True\n",
+    "\n",
+    "# Iterate through all files in the folder\n",
+    "for scan in os.listdir(path):\n",
+    "    # Load the image\n",
+    "    image = nib.load(os.path.join(padded_segm_path, scan))\n",
+    "    image_data = image.get_fdata()\n",
+    "    \n",
+    "    # Get the shape of the current image\n",
+    "    current_shape = image_data.shape\n",
+    "    \n",
+    "    # If reference_shape is None, set it to the shape of the first image\n",
+    "    if reference_shape is None:\n",
+    "        reference_shape = current_shape\n",
+    "    else:\n",
+    "        # Compare the shape of the current image with the reference shape\n",
+    "        if current_shape != reference_shape:\n",
+    "            all_same_size = False\n",
+    "            print(f\"Image {scan} has a different size: {current_shape}\")\n",
+    "            break\n",
+    "\n",
+    "if all_same_size:\n",
+    "    print(\"All images have the same size.\")\n",
+    "else:\n",
+    "    print(\"Not all images have the same size.\")"
+   ]
   }
  ],
  "metadata": {
