--- a/pre-training.ipynb
+++ b/pre-training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,11 @@
     "import sys\n",
     "import shutil\n",
     "import tempfile\n",
+    "from monai.data import Dataset\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "#from torch.utils.tensorboard import SummaryWriter\n",
     "import numpy as np\n",
     "\n",
@@ -25,12 +27,12 @@
     "from monai.transforms import (\n",
     "    EnsureChannelFirst,\n",
     "    Compose,\n",
-    "    RandRotate90,\n",
     "    Resize,\n",
     "    ScaleIntensity,\n",
     ")\n",
     "\n",
     "import glob\n",
+    "import nibabel as nib\n",
     "  \n",
     "\n"
    ]
@@ -43,22 +45,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 0 0 0 0]\n"
-     ]
-    }
-   ],
    "source": [
-    "data_dir = \"\" #fill in pretraining datapath\n",
-    "nifti_files = sorted(glob.glob(os.path.join(data_dir, \"*.nii.gz\")))\n",
-    "labels = None #Fill in binary labels for 1,3,5 Year OS \n"
+    "### Loading the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pin_memory = torch.cuda.is_available()\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
@@ -67,28 +67,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define transforms (check resize shapes!!!!!!!!!!!!)\n",
-    "train_transforms = Compose([ScaleIntensity(), EnsureChannelFirst(), Resize((96, 96, 96))])\n",
-    "\n",
-    "val_transforms = Compose([ScaleIntensity(), EnsureChannelFirst(), Resize((96, 96, 96))])\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Define nifti dataset, data loader\n",
-    "check_ds = ImageDataset(image_files=images, labels=labels, transform=train_transforms)\n",
-    "check_loader = DataLoader(check_ds, batch_size=3, num_workers=2, pin_memory=pin_memory)\n",
-    "\n",
-    "im, label = monai.utils.misc.first(check_loader)\n",
-    "print(type(im), im.shape, label, label.shape)\n",
-    "\n",
-    "# create a training data loader\n",
-    "train_ds = ImageDataset(image_files=images[:10], labels=labels[:10], transform=train_transforms)\n",
-    "train_loader = DataLoader(train_ds, batch_size=2, shuffle=True, num_workers=2, pin_memory=pin_memory)\n",
-    "\n",
-    "# create a validation data loader\n",
-    "val_ds = ImageDataset(image_files=images[-10:], labels=labels[-10:], transform=val_transforms)\n",
-    "val_loader = DataLoader(val_ds, batch_size=2, num_workers=2, pin_memory=pin_memory)"
+    "data_dir = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/paired_scans\" #fill in pretraining datapath\n",
+    "nifti_images = sorted(glob.glob(os.path.join(data_dir, \"*.nii.gz\")))      "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PairedMedicalDataset(Dataset):\n",
+    "    def __init__(self, image_pairs, metadata, labels, transform=None):\n",
+    "        self.image_pairs = image_pairs\n",
+    "        self.metadata = metadata\n",
+    "        self.labels = labels\n",
+    "        self.transform = transform\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.image_pairs)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        img1_path, img2_path = self.image_pairs[idx]\n",
+    "        \n",
+    "        # Load images using nibabel (for NIfTI)\n",
+    "        img1 = nib.load(img1_path).get_fdata()\n",
+    "        img2 = nib.load(img2_path).get_fdata()\n",
+    "\n",
+    "        # Add channel dimension for CNN input (C, H, W, D)\n",
+    "        img1 = np.expand_dims(img1, axis=0)\n",
+    "        img2 = np.expand_dims(img2, axis=0)\n",
+    "        \n",
+    "        metadata = self.metadata[idx]\n",
+    "        label = self.labels[idx]\n",
+    "        \n",
+    "        if self.transform:\n",
+    "            img1 = self.transform(img1)\n",
+    "            img2 = self.transform(img2)\n",
+    "\n",
+    "        # Convert to tensor\n",
+    "        img1 = torch.tensor(img1, dtype=torch.float32)\n",
+    "        img2 = torch.tensor(img2, dtype=torch.float32)\n",
+    "        label = torch.tensor(label, dtype=torch.float32)\n",
+    "        \n",
+    "        return img1, img2, metadata, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create pairs (e.g., first and second file are paired)\n",
+    "image_pairs = [(nifti_images[i], nifti_images[i + 1]) for i in range(0, len(nifti_images) - 1, 2)]\n",
+    "labels = None #Fill in correct path. response, PFS, and OS\n",
+    "\n",
+    "# Create dataset        Change resize!!!!!!!!!!!!!!\n",
+    "train_dataset = PairedMedicalDataset(image_pairs, labels, transform=[ScaleIntensity(), EnsureChannelFirst(), Resize((96, 96, 96))])\n",
+    "\n",
+    "# DataLoader\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=4, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SiameseNetwork(nn.Module):\n",
+    "    def __init__(self, base_model):\n",
+    "        super(SiameseNetwork, self).__init__()\n",
+    "        self.base_model = base_model\n",
+    "        self.fc = nn.Linear(512, 1)  # Output similarity score\n",
+    "    \n",
+    "    def forward(self, input1, input2):\n",
+    "        # Pass both inputs through the shared model\n",
+    "        output1 = self.base_model(input1)\n",
+    "        output2 = self.base_model(input2)\n",
+    "        \n",
+    "        # Compute absolute difference\n",
+    "        diff = torch.abs(output1 - output2)\n",
+    "        \n",
+    "        # Predict similarity score (sigmoid to get value between 0 and 1)\n",
+    "        similarity = torch.sigmoid(self.fc(diff))\n",
+    "        \n",
+    "        return similarity\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
