--- a/training.ipynb
+++ b/training.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 28\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mglob\u001b[39;00m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnibabel\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnib\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "#imports\n",
     "import logging\n",
@@ -33,6 +45,7 @@
     "\n",
     "import glob\n",
     "import nibabel as nib\n",
+    "from sklearn.model_selection import train_test_split\n",
     "  \n"
    ]
   },
@@ -131,11 +144,26 @@
     "image_pairs = [(nifti_images[i], nifti_images[i + 1]) for i in range(0, len(nifti_images) - 1, 2)]\n",
     "labels = None #Fill in correct path. response, PFS, and OS\n",
     "\n",
-    "# Create dataset\n",
-    "train_dataset = PairedMedicalDataset(image_pairs, labels, transform=[ScaleIntensity(), EnsureChannelFirst(), Resize((64, 256, 256))])\n",
     "\n",
-    "# DataLoader\n",
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=2, shuffle=True)"
+    "\n",
+    "# Split the data into training and validation sets\n",
+    "train_image_pairs, val_image_pairs, train_labels, val_labels = train_test_split(\n",
+    "    image_pairs, labels, test_size=0.2, random_state=42  # 20% for validation\n",
+    ")\n",
+    "\n",
+    "# Create training dataset\n",
+    "train_dataset = PairedMedicalDataset(\n",
+    "    train_image_pairs, train_labels, transform=[ScaleIntensity(), EnsureChannelFirst(), Resize((64, 256, 256))]\n",
+    ")\n",
+    "\n",
+    "# Create validation dataset\n",
+    "val_dataset = PairedMedicalDataset(\n",
+    "    val_image_pairs, val_labels, transform=[ScaleIntensity(), EnsureChannelFirst(), Resize((64, 256, 256))]\n",
+    ")\n",
+    "\n",
+    "# DataLoaders\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=2, shuffle=False)\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=2, shuffle=False)"
    ]
   },
   {
