--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,51 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 28\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mglob\u001b[39;00m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnibabel\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnib\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#imports\n",
-    "import logging\n",
     "import os\n",
-    "import sys\n",
-    "import shutil\n",
-    "import tempfile\n",
-    "from monai.data import Dataset\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "#from torch.utils.tensorboard import SummaryWriter\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "import monai\n",
-    "from monai.apps import download_and_extract\n",
-    "from monai.config import print_config\n",
-    "from monai.data import DataLoader, ImageDataset\n",
     "from monai.transforms import (\n",
     "    EnsureChannelFirst,\n",
-    "    Compose,\n",
     "    Resize,\n",
     "    ScaleIntensity,\n",
+    "    Compose\n",
     ")\n",
     "\n",
     "import glob\n",
     "import nibabel as nib\n",
     "from sklearn.model_selection import train_test_split\n",
-    "  \n"
+    "from monai.data import Dataset\n"
    ]
   },
   {
@@ -65,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,24 +55,25 @@
     }
    ],
    "source": [
-    "pin_memory = torch.cuda.is_available()\n",
+    "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/paired_scans\" #fill in training datapath\n",
+    "clinical_data_dir = \"C:/Users/P095550/OneDrive - Amsterdam UMC/Documenten/GitHub/CRLM-morph-features\"\n",
     "nifti_images = sorted(glob.glob(os.path.join(data_dir, \"*.nii.gz\")))      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +82,7 @@
     "        self.image_pairs = image_pairs\n",
     "        self.metadata = metadata\n",
     "        self.labels = labels\n",
-    "        self.transform = transform\n",
+    "        self.transform = Compose(transform)\n",
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.image_pairs)\n",
@@ -136,34 +115,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create pairs (e.g., first and second file are paired)\n",
     "image_pairs = [(nifti_images[i], nifti_images[i + 1]) for i in range(0, len(nifti_images) - 1, 2)]\n",
-    "labels = None #Fill in correct path. response, PFS, and OS\n",
     "\n",
+    "pd_metadata = pd.read_csv(os.path.join(clinical_data_dir, \"training_input.csv\"))\n",
+    "metadata = torch.tensor(pd_metadata.values.tolist())\n",
+    "\n",
+    "pd_labels = pd.read_csv(os.path.join(clinical_data_dir, \"training_labels.csv\"))\n",
+    "labels = torch.tensor(pd_labels.values.tolist()) #Fill in correct path. response, PFS, and OS\n",
     "\n",
     "\n",
     "# Split the data into training and validation sets\n",
-    "train_image_pairs, val_image_pairs, train_labels, val_labels = train_test_split(\n",
-    "    image_pairs, labels, test_size=0.2, random_state=42  # 20% for validation\n",
+    "train_image_pairs, val_image_pairs, train_metadata, val_metadata, train_labels, val_labels = train_test_split(\n",
+    "    image_pairs, metadata, labels, test_size=0.2, random_state=42  # 20% for validation\n",
     ")\n",
+    "\n",
     "\n",
     "# Create training dataset\n",
     "train_dataset = PairedMedicalDataset(\n",
-    "    train_image_pairs, train_labels, transform=[ScaleIntensity(), EnsureChannelFirst(), Resize((64, 256, 256))]\n",
+    "    train_image_pairs, train_metadata, train_labels, transform=[ScaleIntensity(), Resize((64, 256, 256))]\n",
     ")\n",
     "\n",
     "# Create validation dataset\n",
     "val_dataset = PairedMedicalDataset(\n",
-    "    val_image_pairs, val_labels, transform=[ScaleIntensity(), EnsureChannelFirst(), Resize((64, 256, 256))]\n",
+    "    val_image_pairs, val_metadata, val_labels, transform=[ScaleIntensity(), Resize((64, 256, 256))]\n",
     ")\n",
     "\n",
     "# DataLoaders\n",
     "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=2, shuffle=False)\n",
     "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=2, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display a few examples from the train_loader\n",
+    "for i, (img1, img2, metadata, label) in enumerate(train_loader):\n",
+    "    print(f\"Batch {i + 1}:\")\n",
+    "    print(f\"Image 1 shape: {img1.shape}\")\n",
+    "    print(f\"Image 2 shape: {img2.shape}\")\n",
+    "    print(f\"Metadata: {metadata}\")\n",
+    "    print(f\"Label: {label}\")\n",
+    "    print(\"-\" * 50)\n",
+    "    if i == 2:  # Display only the first 3 batches\n",
+    "        break"
    ]
   },
   {
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,14 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using cache found in C:\\Users\\marti/.cache\\torch\\hub\\Warvito_MedicalNet-models_main\n"
+      "Using cache found in C:\\Users\\P095550/.cache\\torch\\hub\\Warvito_MedicalNet-models_main\n"
      ]
     }
    ],
@@ -228,65 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SiameseNetwork(encoder)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.4802, 0.4945, 0.4337, 0.5213, 0.5400, 0.5161]],\n",
-       "       grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = torch.randn(1, 1, 64, 256, 256)\n",
-    "model(x,x, torch.Tensor([[0,1,0,1,0]]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 1024, 8, 32, 32])\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create example input tensor\n",
-    "x = torch.randn(1, 1, 64, 256, 256)  # (batch_size, channels, depth, height, width)\n",
-    "\n",
-    "# Pass through the encoder\n",
-    "encoder.eval()\n",
-    "with torch.no_grad():\n",
-    "    features = encoder(x)\n",
-    "\n",
-    "print(features.shape)\n",
-    "\n",
-    "adaptive_pool = nn.AdaptiveAvgPool3d((1, 1, 1))\n",
-    "print(len(adaptive_pool(features)))\n",
-    "\n"
+    "model = SiameseNetwork(encoder)\n"
    ]
   },
   {
@@ -298,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +256,7 @@
     "from torch.optim.lr_scheduler import StepLR\n",
     "from tqdm import tqdm\n",
     "\n",
-    "def train_model(model, train_loader, val_loader, criterion, optimizer, scheduler, num_epochs=10, device='cuda'):\n",
+    "def train_model(model, train_loader, val_loader, criterion, optimizer, scheduler, num_epochs=10, device=\"cuda\"):\n",
     "    best_val_loss = float('inf')\n",
     "\n",
     "    for epoch in range(num_epochs):\n",
@@ -323,11 +271,11 @@
     "        correct = 0\n",
     "        total = 0\n",
     "        \n",
-    "        for inputs, labels in tqdm(train_loader):\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        for img_1, img_2, metadata, labels in tqdm(train_loader):\n",
+    "            img_1, img_2, metadata, labels = img_1.to(device), img_2.to(device), metadata.to(device), labels.to(device)\n",
     "            \n",
     "            # Forward pass\n",
-    "            outputs = model(inputs)\n",
+    "            outputs = model(img_1, img_2, metadata)\n",
     "            loss = criterion(outputs, labels)\n",
     "            \n",
     "            # Backward pass and optimization\n",
@@ -337,6 +285,8 @@
     "            \n",
     "            # Track metrics\n",
     "            running_loss += loss.item()\n",
+    "            print(preds)\n",
+    "            print(labels)\n",
     "            _, preds = torch.max(outputs, 1)\n",
     "            correct += (preds == labels).sum().item()\n",
     "            total += labels.size(0)\n",
@@ -355,10 +305,10 @@
     "        total = 0\n",
     "        \n",
     "        with torch.no_grad():\n",
-    "            for inputs, labels in val_loader:\n",
-    "                inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            for img_1, img_2, metadata, labels in val_loader:\n",
+    "                img_1, img_2, metadata, labels = img_1.to(device), img_2.to(device), metadata.to(device), labels.to(device)\n",
     "                \n",
-    "                outputs = model(inputs)\n",
+    "                outputs = model(img_1, img_2, metadata)\n",
     "                loss = criterion(outputs, labels)\n",
     "                \n",
     "                val_loss += loss.item()\n",
@@ -381,8 +331,9 @@
     "        if val_loss < best_val_loss:\n",
     "            best_val_loss = val_loss\n",
     "            torch.save(model.state_dict(), 'best_model.pth')\n",
-    "            print(\"🔥 Best model saved!\")\n",
-    "    \n",
+    "            print(\"Best model saved!\")\n",
+    "        break\n",
+    "\n",
     "    print(\"\\nTraining complete. Best Val Loss: {:.4f}\".format(best_val_loss))\n",
     "\n"
    ]
@@ -391,10 +342,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1/20\n",
+      "--------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/115 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:30: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  img1 = torch.tensor(img1, dtype=torch.float32)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:31: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  img2 = torch.tensor(img2, dtype=torch.float32)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:32: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  label = torch.tensor(label, dtype=torch.float32)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:30: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  img1 = torch.tensor(img1, dtype=torch.float32)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:31: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  img2 = torch.tensor(img2, dtype=torch.float32)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:32: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  label = torch.tensor(label, dtype=torch.float32)\n",
+      "  0%|          | 0/115 [00:40<?, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Model\n",
-    "model = model.to('cuda')\n",
+    "model = model.to(device)\n",
     "\n",
     "# Loss function (for classification)\n",
     "criterion = nn.CrossEntropyLoss()\n",
@@ -406,7 +393,7 @@
     "scheduler = StepLR(optimizer, step_size=5, gamma=0.1)\n",
     "\n",
     "# Start training!\n",
-    "train_model(model, train_loader, val_loader, criterion, optimizer, scheduler, num_epochs=20)\n"
+    "train_model(model, train_loader, val_loader, criterion, optimizer, scheduler, num_epochs=20, device=device)\n"
    ]
   }
  ],
