Cleaned up code

--- a/Scans_data_preparation.ipynb
+++ b/Scans_data_preparation.ipynb
@@ -99,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all paths \n",
+    "# All paths \n",
     "all_scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/all_scans\"\n",
     "all_segmentations_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/all_segmentations\"\n",
     "\n",
@@ -1077,7 +1077,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resize scans"
+    "## Resize scans\n",
+    "\n",
+    "Not currently used, resizing is done online using MONAI"
    ]
   },
   {
@@ -1098,9 +1100,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Define the desired size\n",
     "#(depth, height, width)\n",
     "desired_size = (300, 300, 100)\n",
@@ -1145,16 +1144,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "328\n",
-      "376\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#distribution of slices\n",
     "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last_scans\"\n",
@@ -1178,71 +1168,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create segmentation and bounding box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Segments the liver and apply bounding box \n",
-    "\"\"\"\n",
-    "\n",
-    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last_scans\"\n",
-    "segmentations_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/last_segmentations\"\n",
-    "output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_scans\"\n",
-    "\n",
-    "max_dimensions = [0, 0, 0]\n",
-    "\n",
-    "for scan in os.listdir(scans_path):\n",
-    "    print(scan)\n",
-    "    \n",
-    "    #load image and corresponding segmentation\n",
-    "    image = nib.load(os.path.join(scans_path, scan))\n",
-    "\n",
-    "    segm_filename = scan.replace(\"_0000\", \"\")\n",
-    "    segmentation = nib.load(os.path.join(segmentations_path, segm_filename))\n",
-    "\n",
-    "    image_data = image.get_fdata()\n",
-    "    segmentation_data = segmentation.get_fdata()\n",
-    "\n",
-    "    liver_mask = (segmentation_data == 12) | (segmentation_data == 13)\n",
-    "\n",
-    "    #apply mask to image\n",
-    "    liver_image = np.copy(image_data)\n",
-    "    liver_image[~liver_mask] = 0\n",
-    "\n",
-    "    # Find the indices of the liver mask\n",
-    "    mask_indices = np.argwhere(liver_mask)\n",
-    "\n",
-    "    # Calculate the bounding box\n",
-    "    min_indices = mask_indices.min(axis=0)\n",
-    "    max_indices = mask_indices.max(axis=0)\n",
-    "\n",
-    "    # Crop the liver image using the bounding box\n",
-    "    cropped_liver_image = liver_image[min_indices[0]:max_indices[0]+1, min_indices[1]:max_indices[1]+1, min_indices[2]:max_indices[2]+1]\n",
-    "    \n",
-    "    # Update the maximum dimensions\n",
-    "    max_dimensions = np.maximum(max_dimensions, cropped_liver_image.shape)\n",
-    "\n",
-    "    # Create a new NIfTI image\n",
-    "    new_image = nib.Nifti1Image(cropped_liver_image, affine=image.affine, header=image.header)\n",
-    "\n",
-    "    # Save the new NIfTI image to a file with the original name\n",
-    "    new_filename = scan.split(\".\")[0] + \"_cropped.nii.gz\"\n",
-    "    output_file_path = os.path.join(output_path, new_filename)\n",
-    "    nib.save(new_image, output_file_path)\n",
-    "\n",
-    "print(f\"max dimensions: {max_dimensions}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Distribution of dimension sizes"
    ]
   },
@@ -1250,15 +1175,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "366\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Checks the shape of every scan and print the max number of slices\n",
