--- a/pre_training_data_preparation.ipynb
+++ b/pre_training_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,23 +10,16 @@
     "import nibabel as nib\n",
     "import numpy as np\n",
     "import os\n",
-    "import monai #monai-weekly is installed\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import monai"
+    "import monai \n",
+    "import pydicom\n",
+    "import dicom2nifti"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pre Training data preparation"
+    "# Pre-Training data preparation"
    ]
   },
   {
@@ -38,48 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1183_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1183_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1184_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1184_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1185_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1185_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1186_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1186_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1187_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1187_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1188_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1188_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1189_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1189_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1190_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1190_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1191_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1191_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1192_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1192_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1193_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1193_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1194_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1194_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1195_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1195_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1196_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1196_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1197_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1197_scan\n",
-      "Copied segmentation folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\\CRLM-CT-1198_segmentation\n",
-      "Copied scan folder to L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1198_scan\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import shutil\n",
     "import os\n",
@@ -128,18 +82,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pydicom\n",
-    "import nibabel as nib\n",
-    "import dicom2nifti\n",
-    "import os"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,44 +92,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unable to read: L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\\CRLM-CT-1001_scan\\1-024.dcm\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\dicom2nifti\\convert_dir.py\", line 41, in convert_directory\n",
-      "    if common.is_dicom_file(file_path):\n",
-      "  File \"c:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\dicom2nifti\\common.py\", line 1157, in is_dicom_file\n",
-      "    file_stream = open(filename, 'rb')\n",
-      "KeyboardInterrupt\n",
-      "Slice increment not consistent through all slices\n",
-      "---------------------------------------------------------\n",
-      "[-188.899994 -194.5      -116.      ] [ 0.   0.  -1.5]\n",
-      "[-188.899994 -194.5      -113.      ] [ 0.  0. -3.]\n",
-      "Instance Number: 23\n",
-      "---------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\dicom2nifti\\convert_dir.py\", line 86, in convert_directory\n",
-      "    convert_dicom.dicom_array_to_nifti(dicom_input, nifti_file, reorient)\n",
-      "  File \"c:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\dicom2nifti\\convert_dicom.py\", line 119, in dicom_array_to_nifti\n",
-      "    results = convert_generic.dicom_to_nifti(dicom_list, output_file)\n",
-      "  File \"c:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\dicom2nifti\\convert_generic.py\", line 260, in dicom_to_nifti\n",
-      "    common.validate_slice_increment(dicom_input)\n",
-      "  File \"c:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\dicom2nifti\\common.py\", line 896, in validate_slice_increment\n",
-      "    raise ConversionValidationError('SLICE_INCREMENT_INCONSISTENT')\n",
-      "dicom2nifti.exceptions.ConversionValidationError: SLICE_INCREMENT_INCONSISTENT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted CRLM-CT-1001_scan to nifti\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\"\n",
     "segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\"\n",
@@ -276,11 +181,6 @@
     "    print(f\"Conversion successful: {nifti_file}\")\n",
     "    break"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
