--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,29 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#imports\n",
+    "# Imports\n",
     "import os\n",
-    "\n",
+    "import glob\n",
+    "import nibabel as nib\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import torch.optim as optim\n",
     "\n",
+    "from torch.optim.lr_scheduler import StepLR\n",
+    "from tqdm import tqdm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from monai.data import Dataset\n",
     "from monai.transforms import (\n",
-    "    EnsureChannelFirst,\n",
     "    Resize,\n",
     "    ScaleIntensity,\n",
     "    Compose\n",
-    ")\n",
-    "\n",
-    "import glob\n",
-    "import nibabel as nib\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from monai.data import Dataset\n"
+    ")"
    ]
   },
   {
@@ -38,22 +38,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading the data"
+    "## Loading the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -172,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize model"
+    "## Initialize model"
    ]
   },
   {
@@ -210,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -225,37 +217,24 @@
     "resnet_model = torch.hub.load('Warvito/MedicalNet-models', 'medicalnet_resnet50')\n",
     "\n",
     "# Remove the final classification layer (fc) to keep only the encoder part\n",
-    "encoder = nn.Sequential(*list(resnet_model.children())[:-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = SiameseNetwork(encoder)\n"
+    "encoder = nn.Sequential(*list(resnet_model.children())[:-1])\n",
+    "\n",
+    "model = SiameseNetwork(encoder)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training"
+    "## Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.optim.lr_scheduler import StepLR\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "def train_model(model, train_loader, val_loader, criterion, optimizer, scheduler, num_epochs=10, device=\"cuda\"):\n",
     "    best_val_loss = float('inf')\n",
     "\n",
@@ -334,57 +313,20 @@
     "            print(\"Best model saved!\")\n",
     "        break\n",
     "\n",
-    "    print(\"\\nTraining complete. Best Val Loss: {:.4f}\".format(best_val_loss))\n",
-    "\n"
+    "    print(\"\\nTraining complete. Best Val Loss: {:.4f}\".format(best_val_loss))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Epoch 1/20\n",
-      "--------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/115 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:30: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  img1 = torch.tensor(img1, dtype=torch.float32)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:31: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  img2 = torch.tensor(img2, dtype=torch.float32)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:32: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  label = torch.tensor(label, dtype=torch.float32)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:30: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  img1 = torch.tensor(img1, dtype=torch.float32)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:31: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  img2 = torch.tensor(img2, dtype=torch.float32)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_14032\\1377056948.py:32: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  label = torch.tensor(label, dtype=torch.float32)\n",
-      "  0%|          | 0/115 [00:40<?, ?it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model\n",
     "model = model.to(device)\n",
     "\n",
     "# Loss function (for classification)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.BCEWithLogitsLoss()\n",
     "\n",
     "# Optimizer\n",
     "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
