Added tumor segmentations, images only model and model evaluation

--- a/Clinical_data_preparation.ipynb
+++ b/Clinical_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "009f736e-9a34-462e-8a8c-104b12529edc",
+       "ref": "aba16275-b22e-4c6a-bf21-dca2b93181ae",
        "rows": [
         [
          "0",
@@ -340,7 +340,7 @@
        "4           5     0     0     0  FOLFIRI-B   1.609856   4.435318"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,13 +352,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#select subjects with scans\n",
     "\n",
-    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/paired_scans\"\n",
+    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/paired_tumor_scans\"\n",
     "subjects = []\n",
     "\n",
     "for scan in os.listdir(scans_path):\n",
@@ -371,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n"
+      "{406}\n"
      ]
     }
    ],
@@ -392,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Delete scans of patient 104"
+    "Delete scans of patient 104 (and 406 for tumor segmentations)"
    ]
   },
   {
